# whos-watching-your-building

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  skills-lock.json
.claude/skills/: neo4j-cli-tools-skill  neo4j-cypher-skill  neo4j-getting-started-skill  neo4j-migration-skill
notebooks/: explore_311_complaints.py  explore_acris_ownership.py  explore_dob_safety_violations.py  explore_registrations.py  explore_violations.py  phase2_validation.py  phase4_validation.py  phase5_validation.py
specs/: mission.md  roadmap.md  sample-questions.md  tech-stack.md
specs/2026-04-23-phase-0-foundation/: plan.md  requirements.md  validation.md
specs/2026-04-26-phase-1-data-exploration/: findings.md  plan.md  requirements.md  validation.md
specs/2026-04-27-graph-loading/: plan.md  requirements.md  validation.md
specs/2026-04-27-graph-schema-design/: constraints_and_indexes.cypher  plan.md  requirements.md  schema.md  validation.md
specs/2026-04-27-phase-2-core-data-ingestion/: plan.md  requirements.md  validation.md
specs/2026-04-30-acris-ownership-ingestion/: plan.md  requirements.md  validation.md
specs/2026-04-30-phase-5-dob-safety-violations/: plan.md  requirements.md  validation.md
src/: pipeline.py
src/graph/: loader.py
src/ingest/: normalize.py  soda_client.py
