[project]
name = "whos-watching-your-building"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "boto3>=1.42.95",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "marimo>=0.23.2",
    "neo4j>=6.1.0",
    "pydantic-ai-slim>=1.86.1",
    "python-dotenv>=1.2.2",
    "rdflib>=7.6.0",
    "sentence-transformers>=5.4.1",
    "sodapy>=2.2.0",
    "streamlit>=1.56.0",
    "tavily-python>=0.7.23",
]
